partindo para responsividade

--- a/index.html
+++ b/index.html
@@ -143,15 +143,23 @@
             </a>
 
             <a href="https://github.com/fariascarlos2346" class="botao-contato Github">
-                <svg  width="24" height="24" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                <svg  width="24" height="24" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#333">
                     <title>GitHub</title>
                     <path d="M12 .297C5.37.297 0 5.67 0 12.297c0 5.3 3.438 9.8 8.207 11.385.6.113.793-.263.793-.585 0-.287-.01-1.04-.015-2.04-3.338.724-4.043-1.61-4.043-1.61-.547-1.387-1.335-1.757-1.335-1.757-1.09-.745.083-.73.083-.73 1.205.085 1.84 1.238 1.84 1.238 1.07 1.83 2.805 1.3 3.49.995.108-.775.418-1.3.76-1.6-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.235-3.22-.135-.302-.54-1.525.105-3.176 0 0 1.005-.322 3.3 1.23a11.54 11.54 0 0 1 3-.405c1.02.005 2.04.14 3 .405 2.295-1.552 3.3-1.23 3.3-1.23.645 1.65.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.095.81 2.22 0 1.604-.015 2.897-.015 3.293 0 .323.19.705.8.585C20.565 22.092 24 17.592 24 12.297 24 5.67 18.63.297 12 .297z"/>
                   </svg>                 
                   <span>Github</span>
             </a>
+              
         </div>
     </section>
-    
+
+    <footer>
+        <svg xmlns="http://www.w3.org/2000/svg" ">
+            <text x="10" y="20" font-family="Arial, sans-serif" font-size="20" fill="white">
+              Feito com ❤️ por Carlos
+            </text>
+          </svg>
+    </footer>
 
 </body>
 </html>
