--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Olá, eu sou <span>Carlos Henrique </span>.</h1>
             <p>Desenvolvedor focado em construir experiências 
                 criativas e digitais para interfaces intuitivas.</p>
-            <a class="botao">Ver Projetos</a>
+            <a class="botao efeito-cursor">Ver Projetos</a>
         </div>
     </section>
 
@@ -52,7 +52,7 @@
                 <div class="info-projeto">
                     <h3>Projeto Buscador de Receitas</h3>
                     <p>Um Buscador de Receitas online criado com HTML, CSS e JavaScript.</p>
-                    <a href="">Ver Projeto →</a>
+                    <a href="link do projeto">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -118,7 +118,7 @@
         <h2 class="titulo-secao">Contato</h2>
 
         <div class="botoes-contato">
-            <a href="https://wa.link/8nptm4" class="botao-contato whatsapp">
+            <a href="https://wa.link/8nptm4" class="botao-contato whatsapp efeito-cursor">
                 <svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill="#25D366" d="M24 4C12.954 4 4 12.954 4 24c0 4.016 1.172 7.77 3.188 10.934L4 44l9.371-2.422C16.486 43.072 20.087 44 24 44c11.046 0 20-8.954 20-20S35.046 4 24 4zm0 36c-3.604 0-7.002-.982-9.946-2.678l-.71-.423-5.563 1.435 1.479-5.407-.465-.718A15.91 15.91 0 0 1 8 24c0-8.837 7.163-16 16-16s16 7.163 16 16-7.163 16-16 16z"/>
                     <path fill="#FFF" d="M19.53 14.422c-.392-.87-.803-.89-1.177-.905l-.998-.012a1.905 1.905 0 0 0-1.38.636c-.48.521-1.81 1.77-1.81 4.32 0 2.55 1.855 5.012 2.113 5.354.259.343 3.566 5.714 8.77 7.78 4.335 1.565 5.22 1.254 6.153 1.174 1.366-.122 3.018-1.24 3.44-2.435.422-1.195.422-2.222.296-2.435-.125-.213-.463-.342-.97-.6-.506-.258-3.017-1.49-3.486-1.658-.47-.168-.812-.258-1.154.258-.343.516-1.326 1.658-1.627 2-.301.343-.6.386-1.106.128-.506-.258-2.144-.79-4.086-2.52a17.27 17.27 0 0 1-3.158-3.954c-.83-1.436-1.088-2.538-1.221-2.87-.133-.332-.014-.713.29-.94.294-.218.66-.575.99-.864.33-.289.44-.422.633-.694.194-.272.104-.515.03-.694-.075-.179-1.32-3.206-1.84-4.392z"/>
@@ -126,7 +126,7 @@
                   <span>whatsApp</span>
             </a>
 
-            <a href="mailto:fariascarlos2346@gmail.com" class="botao-contato email">
+            <a href="mailto:fariascarlos2346@gmail.com" class="botao-contato email efeito-cursor">
                 <svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="40" height="28" x="4" y="10" fill="#E0E0E0" stroke="#000" stroke-width="2" rx="3"/>
                     <path d="M4 10l20 14L44 10" stroke="#000" stroke-width="2" fill="none"/>
@@ -134,7 +134,7 @@
                   <span>Email</span>
             </a>
 
-            <a href="https://www.linkedin.com/in/carlos-henrique-da-silva-farias/" class="botao-contato linkedin">
+            <a href="https://www.linkedin.com/in/carlos-henrique-da-silva-farias/" class="botao-contato linkedin efeito-cursor">
                 <svg  width="24" height="24" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
                     <title>LinkedIn</title>
                     <path d="M22.23 0H1.77C.79 0 0 .77 0 1.72v20.56C0 23.23.79 24 1.77 24h20.46c.98 0 1.77-.77 1.77-1.72V1.72C24 .77 23.21 0 22.23 0zM7.12 20.45H3.56V9h3.56v11.45zM5.34 7.56a2.06 2.06 0 1 1 0-4.12 2.06 2.06 0 0 1 0 4.12zM20.45 20.45h-3.56v-5.64c0-1.35-.03-3.08-1.88-3.08-1.88 0-2.17 1.47-2.17 2.99v5.73h-3.56V9h3.42v1.56h.05c.48-.9 1.64-1.85 3.37-1.85 3.61 0 4.28 2.37 4.28 5.45v6.29z"/>
@@ -142,7 +142,7 @@
                   <span>Linkedin</span>
             </a>
 
-            <a href="https://github.com/fariascarlos2346" class="botao-contato Github">
+            <a href="https://github.com/fariascarlos2346" class="botao-contato Github efeito-cursor">
                 <svg  width="24" height="24" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#333">
                     <title>GitHub</title>
                     <path d="M12 .297C5.37.297 0 5.67 0 12.297c0 5.3 3.438 9.8 8.207 11.385.6.113.793-.263.793-.585 0-.287-.01-1.04-.015-2.04-3.338.724-4.043-1.61-4.043-1.61-.547-1.387-1.335-1.757-1.335-1.757-1.09-.745.083-.73.083-.73 1.205.085 1.84 1.238 1.84 1.238 1.07 1.83 2.805 1.3 3.49.995.108-.775.418-1.3.76-1.6-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.235-3.22-.135-.302-.54-1.525.105-3.176 0 0 1.005-.322 3.3 1.23a11.54 11.54 0 0 1 3-.405c1.02.005 2.04.14 3 .405 2.295-1.552 3.3-1.23 3.3-1.23.645 1.65.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.095.81 2.22 0 1.604-.015 2.897-.015 3.293 0 .323.19.705.8.585C20.565 22.092 24 17.592 24 12.297 24 5.67 18.63.297 12 .297z"/>
@@ -161,5 +161,18 @@
           </svg>
     </footer>
 
+    <div class="cursor"></div>
+
 </body>
+
+<script>
+    const cursor = document.querySelector('.cursor')
+
+    document.addEventListener('mousemove', function(info) {
+        cursor.style.left = info.clientX + 'px'
+        cursor.style.top = info.clientY + 'px'
+    })
+
+</script>
+
 </html>
