--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <div class="card-projeto">
                 <img class="img-projeto" src="./img/buscador-receitas.png" alt="imagem-projeto">
                 <div class="info-projeto">
-                    <h3>Projeto Buscador de Receitas</h3>
+                    <h3>Projeto App Buscador de Receitas</h3>
                     <p>Um Buscador de Receitas online criado com HTML, CSS e JavaScript.</p>
-                    <a href="link do projeto" target="_blank">Ver Projeto →</a>
+                    <a href="https://app-buscador-de-receitas.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -69,9 +69,9 @@
             <div class="card-projeto">
                 <img class="img-projeto" src="./img/devcafe.png" alt="imagem-projeto">
                 <div class="info-projeto">
-                    <h3>Projeto DevCafe</h3>
+                    <h3>Projeto Cafeteria Dev Carlos</h3>
                     <p>Projeto de uma Cafeteria criado com HTML, CSS e JavaScript.</p>
-                    <a href="" target="_blank">Ver Projeto →</a>
+                    <a href="https://cafeteria-dev-carlos.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                 <div class="info-projeto">
                     <h3>Projeto Back End</h3>
                     <p>Projeto Backend de Uma Amburgueria criado com HTML, CSS e JavaScript.</p>
-                    <a href="" target="_blank">Ver Projeto →</a>
+                    <a href="https://github.com/fariascarlos2346/devburger-api" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -90,6 +90,15 @@
                     <h3>Projeto Calculador</h3>
                     <p>Projeto calculadora criado com HTML, CSS e JavaScript.</p>
                     <a href="https://calculador2025.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/previsao-do-tempo.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Previsão do Tempo</h3>
+                    <p>Projeto previsão do tempo criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://app-tempo-2025.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
         </div>
