--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="info-projeto">
                     <h3>Projeto Previsão do Tempo</h3>
                     <p>Projeto previsão do tempo criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://app-tempo-2025.netlify.app/" target="_blank">Ver Projeto →</a>
+                    <a href="https://app-previsao-tempo-25.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
         </div>
