--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="card-projeto">
-                <img class="img-projeto" src="./img/previsao-do-tempo.png" alt="imagem-projeto">
+                <img class="img-projeto" src="./img/app-previsao-tempo.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto Previsão do Tempo</h3>
                     <p>Projeto previsão do tempo criado com HTML, CSS e JavaScript.</p>
