mais um projeto

--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
             </div>
 
             <div class="card-projeto">
+                <img class="img-projeto" src="./img/tela-login-frontend.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Front End</h3>
+                    <p>Projeto Front End de Uma Amburgueria criado em React, muitas bibliotecas, HTML, CSS e JavaScript.</p>
+                    <a href="https://github.com/fariascarlos2346/carlosdevburger-interface" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
                 <img class="img-projeto" src="./img/calculadora.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto Calculador</h3>
