projeto sorteador númerico

--- a/index.html
+++ b/index.html
@@ -111,12 +111,21 @@
                 </div>
             </div>
 
-                        <div class="card-projeto">
+            <div class="card-projeto">
                 <img class="img-projeto" src="./img/site-corretor.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto Pagina Corretor</h3>
                     <p>Projeto Site para um Corretor de Imoveis criado com HTML, CSS e JavaScript.</p>
                     <a href="https://carloscorretor.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/logo-sorteador.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Sorteador Númerico</h3>
+                    <p>Projeto Site para Sortear um valor entre Dois Números criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://sorteador-entre-dois-valor.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
         </div>
