--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
                     <a href="https://sorteador-entre-dois-valor.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
+
+                        <div class="card-projeto">
+                <img class="img-projeto" src="./img/jokenpow.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Jokenpô</h3>
+                    <p>Projeto Site para brincar Pedra, Papel e Tesoura criado com HTML, CSS, JavaScript e muito mais.</p>
+                    <a href="https://dev-carlos-jokenpo.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
         </div>
     </section>
 
