--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
             </div>
 
             <div class="card-projeto">
+                <img class="img-projeto" src="./img/calculadora.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Calculador</h3>
+                    <p>Projeto calculadora criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://calculador2025.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
                 <img class="img-projeto" src="./img/buscador-receitas.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto App Buscador de Receitas</h3>
