--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
             </div>
 
             <div class="card-projeto">
+                <img class="img-projeto" src="./img/site-corretor.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Pagina Corretor</h3>
+                    <p>Projeto Site para um Corretor de Imoveis criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://carloshenriquecorretor.com.br" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
                 <img class="img-projeto" src="./img/calculadora.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto Calculador</h3>
@@ -222,14 +231,7 @@
                 </div>
             </div>
 
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/site-corretor.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Pagina Corretor</h3>
-                    <p>Projeto Site para um Corretor de Imoveis criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://carloscorretor.netlify.app/" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
+
 
             <div class="card-projeto">
                 <img class="img-projeto" src="./img/logo-sorteador.png" alt="imagem-projeto">
