--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="fundo-header">
         <ul>
             <li>
                 <a id="home">Home</a>
