--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#sobre">Sobre</a>
             </li>
             <li>
-                <a href="#titulo-secao">Contato</a>
+                <a href="#titulo-secao">Fale comigo</a>
             </li>
         </ul>
     </header>
@@ -55,6 +55,15 @@
                     <h3>Projeto Pagina Corretor</h3>
                     <p>Projeto Site para um Corretor de Imoveis criado com HTML, CSS e JavaScript.</p>
                     <a href="https://carloshenriquecorretor.com.br" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/logo-sorteador.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Sorteador Númerico</h3>
+                    <p>Projeto Site para Sortear um valor entre Dois Números criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://sorteador-entre-dois-valor.netlify.app/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -151,10 +160,10 @@
         </div>
     </section>
     
-    <footer>
+    <footer class="footer">
         <svg xmlns="http://www.w3.org/2000/svg">
-            <text x="10" y="20" font-family="Arial, sans-serif" font-size="20" fill="white">
-              Feito com ❤️ por Carlos 
+            <text x="20" y="70" font-family="Arial, sans-serif" font-size="25" fill="black">
+            Desenvolvedor Carlos 
             </text>
           </svg>
           
@@ -233,14 +242,7 @@
 
 
 
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/logo-sorteador.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Sorteador Númerico</h3>
-                    <p>Projeto Site para Sortear um valor entre Dois Números criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://sorteador-entre-dois-valor.netlify.app/" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
+
 
                         <div class="card-projeto">
                 <img class="img-projeto" src="./img/jokenpow.png" alt="imagem-projeto">
