--- a/index.html
+++ b/index.html
@@ -50,11 +50,65 @@
             </div>
 
             <div class="card-projeto">
+                <img class="img-projeto" src="./img/petshop.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Pet Shop</h3>
+                    <p>Pet Shop criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://petshop25.netlify.app/" target="_blank" >Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/tela-to-do-list.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>To-do-list</h3>
+                    <p>To-do-list criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://to-do-list-dez-25.netlify.app/ " target="_blank" >Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/app-previsao-tempo.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Previsão do Tempo</h3>
+                    <p>Projeto previsão do tempo criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://app-previsao-tempo-25.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
                 <img class="img-projeto" src="./img/site-corretor.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Projeto Pagina Corretor</h3>
                     <p>Projeto Site para um Corretor de Imoveis criado com HTML, CSS e JavaScript.</p>
                     <a href="https://carloshenriquecorretor.com.br" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/tela-login-frontend.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto Front End</h3>
+                    <p>Projeto Front End de Uma Amburgueria criado em React, muitas bibliotecas, HTML, CSS e JavaScript.</p>
+                    <a href="https://github.com/fariascarlos2346/carlosdevburger-interface" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/capa-cosmeticos.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Projeto site cosmeticos</h3>
+                    <p>Projeto Site para loja Cosmeticos criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://cosmeticoseperfumesjp.com.br/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/clone-devclub.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Clone tela login DevClub</h3>
+                    <p>Clone da tela de login DevClub criado com HTML, CSS e JavaScript.</p>
+                    <a href="" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
@@ -182,78 +236,3 @@
 
 </script>
 
-<!--
-
-
-
- <div class="card-projeto">
-                <img class="img-projeto" src="./img/clone-devclub.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Clone tela login DevClub</h3>
-                    <p>Clone da tela de login DevClub criado com HTML, CSS e JavaScript.</p>
-                    <a href="" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
-
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/devcafe.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Cafeteria Dev Carlos</h3>
-                    <p>Projeto de uma Cafeteria criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://cafeteria-dev-carlos.netlify.app/" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
-
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/proj-backend.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Back End</h3>
-                    <p>Projeto Backend de Uma Amburgueria criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://github.com/fariascarlos2346/devburger-api" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
-
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/tela-login-frontend.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Front End</h3>
-                    <p>Projeto Front End de Uma Amburgueria criado em React, muitas bibliotecas, HTML, CSS e JavaScript.</p>
-                    <a href="https://github.com/fariascarlos2346/carlosdevburger-interface" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
-
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/calculadora.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Calculador</h3>
-                    <p>Projeto calculadora criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://calculador2025.netlify.app/" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
-
-            <div class="card-projeto">
-                <img class="img-projeto" src="./img/app-previsao-tempo.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Previsão do Tempo</h3>
-                    <p>Projeto previsão do tempo criado com HTML, CSS e JavaScript.</p>
-                    <a href="https://app-previsao-tempo-25.netlify.app/" target="_blank">Ver Projeto →</a>
-                </div>
-            </div>
-
-
-
-
-
-                        <div class="card-projeto">
-                <img class="img-projeto" src="./img/jokenpow.png" alt="imagem-projeto">
-                <div class="info-projeto">
-                    <h3>Projeto Jokenpô</h3>
-                    <p>Projeto Site para brincar Pedra, Papel e Tesoura criado com HTML, CSS, JavaScript e muito mais.</p>
-                    <a href="https://dev-carlos-jokenpo.netlify.app/" target="_blank">Ver Projeto →</a>
-                </div>
-
-
-
-
-            
-                -->
