--- a/index.html
+++ b/index.html
@@ -104,6 +104,33 @@
             </div>
 
             <div class="card-projeto">
+                <img class="img-projeto" src="./img/page-salao.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Page Salão de Beleza</h3>
+                    <p>Salão de Beleza criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://salao-beleza25.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/page-academia.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Academia</h3>
+                    <p>Site de Academia criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://academia25.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto" src="./img/page-pizza.png" alt="imagem-projeto">
+                <div class="info-projeto">
+                    <h3>Clone tela login DevClub</h3>
+                    <p>Site Pizzaria ou Restaurante criado com HTML, CSS e JavaScript.</p>
+                    <a href="https://restarante-e-pizza25.netlify.app/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
                 <img class="img-projeto" src="./img/clone-devclub.png" alt="imagem-projeto">
                 <div class="info-projeto">
                     <h3>Clone tela login DevClub</h3>
