alteração de textos

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <section class="principal">
         <div>
             <h1>Olá, eu sou <span>Carlos Henrique </span>.</h1>
-            <p>Desenvolvedor focado em construir experiências 
-                criativas e digitais para interfaces intuitivas.</p>
+            <p>Desenvolvo interfaces Web com React e JavaScript, interações direta manipulando o DOM, Integro aplicações
+                com APIs REST, construo componentes reutilizáveis com foco em performance, participo de decisões técnicas e discussão
+                de solução, apoio na qualidade do código do time multidisciplinar e com comunicação clara.</p>
             <a class="botao efeito-cursor">Ver Projetos</a>
         </div>
     </section>
@@ -181,10 +182,16 @@
             <div class="conteudo-sobre">
                 <h2>Desenvolvendo soluções criativas e digitais</h2>
                 <p>
-                    Sou desenvolvedor Frontend e Backend focado em entregar aplicações completas.
+                    Sou desenvolvedor Frontend e Backend focado em entregar aplicações completas. Desenvolvo interfaces
+                    de usuário e componentes reutilizáveis com React, aplicações com APIs, garantindo a comunicação eficaz entre Front-end e Back-end.
                 </p>
                 <p>
-                    Meu maior objetivo e fazer entregas com funcionalidades e resultados criativos para os clientes.
+                   Contribuo para a melhoria contínua do código e das práticas de desenvolvimento. Utilizo recursos 
+                   desenvolvidos com as principais ferramentas de IA do mercado e integrar aos produtos. Capacidade de trabalhar em 
+                   equipe e comunicar-se efetivamente. Experiência prática com controle de versão, como Git. Conhecimento em TypeScript.
+                   Familiaridade com metodologias ágeis, como Scrum ou Kanban. 
+
+                   
                 </p>
 
                 <div class="habilidades">
